# histodu

./: .gitignore  Cargo.toml  README.md  build.rs  flake.nix
.github/workflows/: ci.yaml  future_proof.yaml
src/: cli.rs  lib.rs  main.rs
